objects/Product_Tier_Range__c.object
<CustomObject>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Tier_Set__c</fullName>
        <label>Product Tier Set</label>
        <referenceTo>Product_Tier_Set__c</referenceTo>
        <relationshipLabel>Product Tier Ranges</relationshipLabel>
        <relationshipName>Product_Tier_Ranges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Tier Range</label>
    <nameField>
        <displayFormat>PTR-{000000}</displayFormat>
        <label>Product Tier Range Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Tier Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>